--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
             </div>
         </div>
-        <!-- Login Modal  https://codepen.io/cristinaconacel/pen/VVdgjp-->
+        <!-- Login Modal -->
         <div class="container">
             <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
