--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 
             </div>
         </div>
-        <!-- Login Modal -->
-        <div class="container">
+        <!-- Login Modal-->
+        <div class="login-container">
             <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
@@ -194,19 +194,40 @@
     <div class="slide-wrapper">
         <div class="slide-show">
             <div class="slide-img col-12" style="background-image: url(./img/slide_1.png);">
-                <h2>Control and manage any device with cloud solutions</h2>
-                <h5>Improve business performance and the user experience with the right mix of IoT technology and
-                    processes</h5>
+                <div class="slide-text-1">
+                    <p>Control and manage any device with cloud solutions</p>
+                </div>
+                <div class="slide-mini-text-1">
+                    <p>Improve business performance and the user experience with the right mix of IoT technology and
+                        processes</p>
+                </div>
+                <div class="slide-button"><button type="slide-button">
+                        <p>View More</p>
+                    </button></div>
             </div>
             <div class="slide-img col-12" style="background-image: url(./img/slide_2.png);">
-                <h3>Control and manage any device with cloud solutions</h3>
-                <h5>Improve business performance and the user experience with the right mix of IoT technology and
-                    processes</h5>
+                <div class="slide-text-2">
+                    <p>Control and manage any device with cloud solutions</p>
+                </div>
+                <div class="slide-mini-text-2">
+                    <p>Improve business performance and the user experience with the right mix of IoT technology and
+                        processes</p>
+                </div>
+                <div class="slide-button"><button type="slide-button">
+                        <p>View More</p>
+                    </button></div>
             </div>
             <div class="slide-img col-12" style="background-image: url(./img/slide_3.png);">
-                <h4>Control and manage any device with cloud solutions</h4>
-                <h5>Improve business performance and the user experience with the right mix of IoT technology and
-                    processes</h5>
+                <div class="slide-text-3">
+                    <p>Control and manage any device with cloud solutions</p>
+                </div>
+                <div class="slide-mini-text-3">
+                    <p>Improve business performance and the user experience with the right mix of IoT technology and
+                        processes</p>
+                </div>
+                <div class="slide-button"><button type="slide-button">
+                        <p>View More</p>
+                    </button></div>
             </div>
         </div>
     </div>
@@ -241,7 +262,6 @@
                                 </li>
                             </ul>
                         </div>
-                        <h4 id="click">(Load More)</h4>
                     </div>
                 </div>
             </div>
@@ -249,15 +269,15 @@
     </div>
     <!-- Banner-->
     <div class="banner-wrapper">
-
-        <div class="banner-picture">
-            <h4>Banner quote</h4>
-            <img src="img/banner.png">
+        <img src="./img/banner.png" alt="banner" style="width:100%;">
+        <div class="banner-txt">
+            <p>Find Balance</p>
         </div>
     </div>
+
+    </div>
     <!-- Featured Products-->
-    <div class="feat-products" id="feat-prod">
-        <h4>Feautured Products</h4>
+    <div class="feat-products">
         <div class="static-background-p">
             <div class="static-img">
                 <img src="img/f_prod_1.png">
@@ -286,12 +306,17 @@
                 <h3>Awesome</h3>
             </div>
         </div>
+
+    </div>
+    <!-- Feautured static-->
+    <div class="feat-static">
         <div class="static-background">
             <div class="static-feature">
                 <h3>Focus</h3>
                 <div class="static-text">
                     <img src="img/f_prod_focus.png">
-                    <p>Our unwavering focus on superior service delivery and building next generation competencies
+                    <p>Our unwavering focus on superior service delivery and building next generation
+                        competencies
                     </p>
                 </div>
             </div>
@@ -299,7 +324,8 @@
                 <h3>Method</h3>
                 <div class="static-text">
                     <img src="img/f_prod_method.png">
-                    <p>A standardized methodology designed to deliver measurable business results and predictable costs
+                    <p>A standardized methodology designed to deliver measurable business results and
+                        predictable costs
                     </p>
                 </div>
             </div>
@@ -307,7 +333,8 @@
                 <h3>Knowledge</h3>
                 <div class="static-text">
                     <img src="img/f_prod_knowledge.png">
-                    <p>A highly skilled, proactive workforce that reliably improves each client's ROI while mitigating
+                    <p>A highly skilled, proactive workforce that reliably improves each client's ROI while
+                        mitigating
                         their business risk
                     </p>
                 </div>
@@ -317,38 +344,22 @@
     <!-- Footer-->
     <footer class="footer">
         <div class="footer-items">
-            <div class="contact_info">
-                <h4>Contact</h4>
-                <p>Headquarters: 5600, Blvd des Galeries, Bur 530 Quebec, Quebec G2K 2H6</p><br>
-                <p>contact@osf-global.com</p><br>
-                <p>+1(888) 548-4344</p>
+            <div class="contact-info">
+                <p>Contact</p>
+                <a href="address">Headquarters: 5600, Blvd des Galeries,<br> Bur 530 Quebec, Quebec G2K 2H6</a><br>
+                <a href="email">contact@osf-global.com</a>
+                <a href="#phone">+1(888) 548-4344</a>
             </div>
             <div class="categories">
-                <h4>Categories</h4>
+                <p>Categories</p>
                 <a href="#404">Alcohol</a>
                 <a href="#404">Art</a>
                 <a href="#404">Books</a>
                 <a href="#404">Drink</a>
                 <a href="#404">Electronics</a>
             </div>
-            <div class="categories">
-                <a href="#404">Home</a>
-                <a href="#404">Jewelry</a>
-                <a href="#404">Kids & Baby</a>
-                <a href="#404">Men's Fashion</a>
-                <a href="#404">Mobile</a>
-                <a href="#404">Motorcycles</a>
-                <a href="#404">Movies</a>
-                <a href="#404">Music</a>
-            </div>
-            <div class="categories">
-                <a href="#404">Sport</a>
-                <a href="#404">Toys</a>
-                <a href="#404">Travel</a>
-                <a href="#404">Women's Fashion</a>
-            </div>
             <div class="about">
-                <h4>About</h4>
+                <p>About</p>
                 <a href="#company">About Us</a>
                 <a href="#delivery">Delivery</a>
                 <a href="#404">Testimonials</a>
@@ -356,7 +367,7 @@
             </div>
             <nav>
                 <ul>
-                    <li>
+                    <div class="social-platform">
                         <i class="fa fa-facebook" id="f-icon"></i>
                         <a href="https://facebook.com">
                             Facebook
@@ -377,8 +388,8 @@
                         <a href="https://pinterest.com">
                             Pinterest
                         </a>
-                    </li>
-                </ul>
+                        </li>
+                    </div>
             </nav>
             <div class="copyright">
                 &copy;
